--- a/TeamX/language/jp.yaml
+++ b/TeamX/language/jp.yaml
@@ -40,7 +40,7 @@ pm_about_text: |
 pm_about_admin_text: |
   *✺ 今すぐあなたのグループを少し効果的にしましょう ✺*
 
-  おめでとうございます。RoroRobotがグループを管理する準備が整いました。
+  おめでとうございます。TeamXがグループを管理する準備が整いました。
 
   *管理ツール*
   基本的な管理ツールは、グループを保護してパワーアップするのに役立ちます。
